# programming-techniques-hw

./: .gitmodules  CMakeLists.txt  README.md
entry/: CMakeLists.txt  entry.cpp  entry.h
generate_data/: CMakeLists.txt  geography.h  main.cpp  names.h
helpers/: CMakeLists.txt  io_operations.cpp  io_operations.h
lab1/: CMakeLists.txt  heap_sort.h  main.cpp  quick_sort.h  run.py  shaker_sort.h
lab1/entry/: entry.cpp
lab1/generate_data/: main.cpp  teams.h
lab1/test_sort/: heap_sort.h  main.cpp
lab2/: CMakeLists.txt  binary_search.h  linear_search.h  main.cpp  run.py
lab3/: CMakeLists.txt  dummy.cpp  dummy.h  elf.cpp  elf.h  hash_table.h  main.cpp  rot13.cpp  rot13.h  run.py
lab4/: CMakeLists.txt  chi_squared.h  custom.cpp  custom.h  dummy.cpp  dummy.h  main.cpp  run.py  stat_utils.h
lab5/: CMakeLists.txt  composite.cpp  composite.h  main.cpp
lab6/: CMakeLists.txt  command.cpp  command.h  invoker.cpp  invoker.h  main.cpp  receiver.cpp  receiver.h
